EDGECLOUD-2657 If the Flavor name is too long you can no longer get t… (#369)
* EDGECLOUD-2657 If the Flavor name is too long you can no longer get to the delete option in the UI at full screen

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1534,7 +1534,8 @@ body, button, input, textarea, optgroup, select, textarea,
 }
 /*Alert word-break*/
 .s-alert-wrapper > .s-alert-box {
-    word-break: keep-all;
+    word-break: break-word;
+    overflow: hidden;
 }
 
 /*Alert progress */
